# UIparserCV

./: .gitignore  CMakeLists.txt  README.md
docs/: grouping-research.md  uitag-model-only-exper1.md
include/uiparsercv/common/: types.hpp
include/uiparsercv/detect/: uitag_detector.hpp
include/uiparsercv/export/: debug_overlay.hpp  json_exporter.hpp
include/uiparsercv/icon/: icon_detector.hpp
include/uiparsercv/infer/: onnx_session.hpp
include/uiparsercv/ocr/: ocr_detector.hpp  ocr_recognizer.hpp  text_normalizer.hpp
include/uiparsercv/pipeline/: boundaryless_group_detector.hpp  line_rect_detector.hpp  pipeline_runner.hpp  tree_grouper.hpp  ui_element.hpp  visual_container_detector.hpp
include/uiparsercv/tree/: box_tree.hpp
models/icon_detect/: model.metadata.json
src/app/: pipeline_cli.cpp
src/detect/: uitag_detector.cpp
src/export/: debug_overlay.cpp  json_exporter.cpp
src/icon/: icon_detector.cpp
src/infer/: onnx_session.cpp
src/ocr/: ocr_detector.cpp  ocr_recognizer.cpp  text_normalizer.cpp
src/pipeline/: boundaryless_group_detector.cpp  line_rect_detector.cpp  pipeline_runner.cpp  tree_grouper.cpp  ui_element.cpp  visual_container_detector.cpp
src/tree/: box_tree.cpp
tools/: CMakeLists.txt  boundaryless_group_probe.cpp  combined_pipeline_test.cpp  component_probe.cpp  line_rect_probe.cpp  live_overlay.cpp  model_combo_compare.cpp  model_file_probe.cpp  onnxruntime_probe.cpp  opencv_probe.cpp  synthetic_ui_corpus.cpp  ui_tree_probe.cpp  uitag_detector_test.cpp  uitag_yolo_probe.cpp
